implement exception handling and resolved attribute bug